--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       var uname = document.getElementById('username').value;
       var pass = document.getElementById('password').value;
 
-      if (uname === "student" && pass === "sindhi") {
+      if (uname =="student" && pass == "sindhi") {
         location.assign("https://krishna-puyed.github.io/ZPSchoolSindhi/");
       } else {
         alert("Login failed! Try again.");
