--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       var pass = document.getElementById('password').value;
 
       if (uname =="student" && pass == "sindhi") {
-        location.assign("https://krishna-puyed.github.io/ZPSchoolSindhi/");
+        location.assign("schooldata.html");
       } else {
         alert("Login failed! Try again.");
       }
