--- a/schooldata.html
+++ b/schooldata.html
@@ -82,7 +82,7 @@
       <button class="btn btn-outline-success btn-custom" onClick="openjocks()">💬 मराठी विनोद</button>
     </div>
 
-    <a href="homeschool.html" class="btn btn-secondary back-btn">🔙 Back to Login</a>
+    <a href="index.html" class="btn btn-secondary back-btn">🔙 Back to Login</a>
   </div>
 
   <!-- English-Marathi Words -->
