--- a/studentAttendance.html
+++ b/studentAttendance.html
@@ -118,8 +118,8 @@
 
     <!-- Download -->
     <div class="text-center">
-    <button class="btn btn-danger mt-2" onclick="downloadPDF()">Download Attendance (PDF)</button>
-
+    <button class="btn btn-danger mt-2" onclick="downloadPDF()">Download Attendance (PDF)</button><br>
+    <a href="index.html" class="btn btn-secondary back-btn">🔙 Back to Login</a>
     </div>
   </div>
 <script>
