--- a/studentAttendance.html
+++ b/studentAttendance.html
@@ -118,8 +118,9 @@
 
     <!-- Download -->
     <div class="text-center">
-    <button class="btn btn-danger mt-2" onclick="downloadPDF()">Download Attendance (PDF)</button><br>
-      <br><br>
+    <button class="btn btn-danger mt-2" onclick="downloadPDF()">Download Attendance (PDF)</button>
+    </div>
+       <div class="text-center">
     <a href="index.html" class="btn btn-secondary back-btn">🔙 Back to Login</a>
     </div>
   </div>
