--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
   <!-- Footer -->
   <footer class="footer text-center">
-    <img src="assets/img/mamu.png" alt="साहेबराव पाटील पुयेड" width="130" height="130">
+    <img src="mamu1.jpg" alt="साहेबराव पाटील पुयेड" width="130" height="130">
     <h4>साहेबराव पाटील पुयेड</h4>
     <h5>अध्यक्ष</h5>
     <h6>शालेय व्यवस्थापन समिती</h6>
