--- a/index.html
+++ b/index.html
@@ -152,19 +152,50 @@
   </div>
 
   <!-- Footer -->
-  <footer class="footer text-center">
-    <img src="mamu1.jpg" alt="साहेबराव पाटील पुयेड" width="130" height="130">
-    <h4>साहेबराव पाटील पुयेड</h4>
-    <h5>अध्यक्ष</h5>
-    <h6>शालेय व्यवस्थापन समिती</h6>
-    <h6>जि.प.प्रा.शा. सिंधी</h6>
-    <h6>ता. उमरी, जि. नांदेड</h6>
+<footer class="footer text-center">
+  <div class="container">
+    <div class="row justify-content-center g-4">
+
+      <!-- Person 1 -->
+     <div class="col-md-4">
+        <img src="https://cdn-icons-png.flaticon.com/128/4140/4140037.png" alt="अनिता देशमुख मॅडम" width="130" height="130">
+        <h4>कदम सर</h4>
+        <h5>मुख्याध्यापक</h5>
+        <h6>जि.प.प्रा.शा. सिंधी</h6>
+        <h6>ता. उमरी, जि. नांदेड</h6>
+      </div>
+
+      <!-- Person 2 -->
+     
+
+
+
+
+  <div class="col-md-4">
+        <img src="assets/img/mamu.png" alt="साहेबराव पाटील पुयेड" width="130" height="130">
+        <h4>साहेबराव पाटील पुयेड</h4>
+        <h5>अध्यक्ष</h5>
+        <h6>शालेय व्यवस्थापन समिती</h6>
+        <h6>जि.प.प्रा.शा. सिंधी</h6>
+        <h6>ता. उमरी, जि. नांदेड</h6>
+      </div>
+      <!-- Person 3 -->
+      <div class="col-md-4">
+        <img src="https://cdn-icons-png.flaticon.com/128/4140/4140037.png" alt="रमेशराव बेंडाळे सर" width="130" height="130">
+        <h4>विलास पाटील नरवाडे</h4>
+        <h5>सरपंच</h5>
+        <h6>सिंधी</h6>
+        <h6>ता. उमरी, जि. नांदेड</h6>
+      </div>
+
+    </div>
 
     <div class="copyright mt-4">
       <p>© 2025 <strong>Krishna Puyed</strong>. All Rights Reserved.</p>
       <p>Designed with ❤️ by Krishna</p>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <!-- Scroll Top Button -->
   <a href="#" id="scroll-top"><i class="bi bi-arrow-up-short"></i></a>
