--- a/schooldata.html
+++ b/schooldata.html
@@ -120,6 +120,17 @@
    
     
     <div class="module-buttons">
+       <div class="module-buttons">
+ <button class="btn btn-outline-info btn-custom" onClick="openmathproblems()">✏️ बेरीज-वजाबाकी-गुणाकार-भागाकर</button>
+
+ <button class="btn btn-outline-danger btn-custom" onClick="openworkbook1()">📘 Work Book-वर्ग १ ला</button>
+
+ <button class="btn btn-outline-success btn-custom" onClick="openworkbook2()">📘 Work Book-वर्ग २ रा</button>
+
+ <button class="btn btn-outline-primary btn-custom" onClick="openworkbook3()">📘 Work Book-वर्ग ३ रा</button>
+
+<button class="btn btn-outline-info btn-custom" onClick="openworkbook4()">📘 Work Book-वर्ग ४ था</button>
+
       <button class="btn btn-outline-success btn-custom" onClick="openenglish()">📘 English-Marathi Words</button>
       <button class="btn btn-outline-info btn-custom" onclick="showQuizModule()">✏️ Grammar Quiz</button>
       <button class="btn btn-outline-warning btn-custom" onClick="openfiveclass()">📄 5th Class Scholarship Paper</button>
@@ -189,6 +200,49 @@ window.open("squarecube1.pdf");
 
 }
 
+
+
+function openmathproblems()
+{
+window.open("mathproblem.pdf");
+
+}
+
+function openworkbook1()
+{
+window.open("workbook1class.pdf");
+
+}
+
+function openworkbook2()
+{
+window.open("workbook2class.pdf");
+
+}
+
+
+function openworkbook3()
+{
+window.open("workbook3class.pdf");
+
+}
+
+
+function openworkbook4()
+{
+window.open("workbook4class.pdf");
+
+}
+
+
+
+
+
+
+
+
+
+  
   function hideAllModules() {
     document.querySelectorAll('.module-section').forEach(section => section.style.display = 'none');
   }
