--- a/schooldata.html
+++ b/schooldata.html
@@ -119,7 +119,7 @@
     <button class="btn btn-outline-dark btn-custom" onclick="showLeaveTemplate()">📄 रजा अर्ज दाखवा</button>
   </div>
 
-  <a href="homeschool.html" class="btn btn-secondary back-btn">🔙 Back to Login</a>
+  <a href="index.html" class="btn btn-secondary back-btn">🔙 Back to Login</a>
 </div>
 
 <!-- English-Marathi Words -->
