--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   
    <!-- Center Section -->
 <div class="center-text">
-  <h1 class="school-title">जि.प.प्रा.शाळा <span class="highlighted-word">सिंधि</span></h1>
+  <h1 class="school-title">जि.प.प्रा.शाळा <span class="highlighted-word">सिंधी</span></h1>
   <div class="underline mx-auto"></div>
   <h3 class="school-subtitle">ता.उमरी जि.नांदेड</h3>
 </div>
