--- a/index.html
+++ b/index.html
@@ -17,23 +17,58 @@
       padding: 0;
       overflow-x: hidden;
     }
+.site-title {
+  font-family: 'Baloo 2', cursive;
+  font-size: 2.5rem;
+  font-weight: 700;
+  background: linear-gradient(90deg, #ffffff, #ffeb3b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  animation: popIn 1s ease;
+}
 
-    .header {
-      background: linear-gradient(to right, #0066ff, #003d99);
-      color: white;
-      padding: 1.5rem 2rem;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+.site-title .highlight {
+  background: linear-gradient(90deg, #ff4081, #ff6f61);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
 
-    .site-title {
-      font-family: 'Baloo 2', cursive;
-      font-size: 2rem;
-    }
+@keyframes popIn {
+  0% {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 
-    .login-btn {
-      font-weight: bold;
-      border-radius: 20px;
-    }
+
+
+
+
+.stylish-header-text {
+  font-size: 2.5rem;
+  background: linear-gradient(to right, #ffd54f, #f06292, #ba68c8);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Baloo 2', cursive;
+  animation: fadeSlideDown 1.2s ease-in-out;
+}
+
+.text-pink {
+  color: #ff4081;
+  background: linear-gradient(to right, #ff8a65, #ff4081);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+
+
 
       .center-text {
   text-align: center;
@@ -200,11 +235,16 @@
 
 <body>
 
-  <!-- Header -->
-  <div class="header d-flex justify-content-between align-items-center">
-    <div class="site-title">आदर्श गाव सिंधी</div>
-    <button class="btn btn-light login-btn" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+ 
+
+<!-- Header -->
+<div class="header d-flex justify-content-between align-items-center flex-wrap px-4 py-3 shadow-sm">
+  <div class="d-flex align-items-center gap-3">
+    <i class="bi bi-mortarboard-fill fs-1 text-warning"></i>
+    <h1 class="site-title m-0 stylish-header-text">आदर्श गाव <span class="text-pink">सिंधी</span></h1>
   </div>
+  <button class="btn btn-light login-btn shadow-sm px-4" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+</div>
 
 <!-- Marquee Section -->
 <div class="marquee-container">
