--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <div class="header d-flex justify-content-between align-items-center flex-wrap px-4 py-3 shadow-sm">
   <div class="d-flex align-items-center gap-3">
   
-    <h1 class="site-title m-0 stylish-header-text">आदर्श गाव <span class="text-pink">सिंधी</span></h1>
+    <h1 class="site-title m-0 stylish-header-text"><span class="text-pink">सिंधी</span></h1>
   </div>
   <button class="btn btn-light login-btn shadow-sm px-4" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
 </div>
@@ -256,7 +256,7 @@
   
    <!-- Center Section -->
 <div class="center-text">
-  <h1 class="school-title">जि.प.प्रा.शाळा <span class="highlighted-word">सिंधी</span></h1>
+  <h1 class="school-title">पी एम श्री जि.प.प्रा.शाळा <span class="highlighted-word">सिंधी</span></h1>
   <div class="underline mx-auto"></div>
   <h3 class="school-subtitle">ता.उमरी जि.नांदेड</h3>
 </div>
@@ -293,7 +293,7 @@
 
       <!-- Person 1 -->
      <div class="col-md-4">
-        <img src="https://cdn-icons-png.flaticon.com/128/4140/4140037.png" alt="अनिता देशमुख मॅडम" width="130" height="130">
+        <img src="kadam.jpeg" alt="अनिता देशमुख मॅडम" width="130" height="130">
         <h4>कदम सर</h4>
         <h5>मुख्याध्यापक</h5>
         <h6>जि.प.प्रा.शा. सिंधी</h6>
@@ -314,14 +314,7 @@
         <h6>जि.प.प्रा.शा. सिंधी</h6>
         <h6>ता. उमरी, जि. नांदेड</h6>
       </div>
-      <!-- Person 3 -->
-      <div class="col-md-4">
-        <img src="https://cdn-icons-png.flaticon.com/128/4140/4140037.png" alt="रमेशराव बेंडाळे सर" width="130" height="130">
-        <h4>विलास पाटील नरवाडे</h4>
-        <h5>सरपंच</h5>
-        <h6>सिंधी</h6>
-        <h6>ता. उमरी, जि. नांदेड</h6>
-      </div>
+    
 
     </div>
 
