--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
       <!-- Person 1 -->
      <div class="col-md-4">
-        <img src="kadam.jpeg" alt="अनिता देशमुख मॅडम" width="130" height="130">
+        <img src="kadam.jpg" alt="अनिता देशमुख मॅडम" width="130" height="130">
         <h4>कदम सर</h4>
         <h5>मुख्याध्यापक</h5>
         <h6>जि.प.प्रा.शा. सिंधी</h6>
