--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 .stylish-header-text {
-  font-size: 1.7rem;
+  font-size: 2.6rem;
   background: linear-gradient(to right, #ffd54f, #f06292, #ba68c8);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -249,7 +249,7 @@
 <!-- Marquee Section -->
 <div class="marquee-container">
   <marquee behavior="scroll" direction="left" scrollamount="7">
-    🎉 स्वागत आहे आदर्श गाव सिंधी शाळेच्या संकेतस्थळावर! 🎓 शिक्षण हीच खरी संपत्ती आहे! 📚 एकत्र येऊया, शिकूया आणि घडवूया उज्वल भविष्य! 🚀
+    🎉 स्वागत आहे सिंधी गावच्या शाळेच्या संकेतस्थळावर! 🎓 शिक्षण हीच खरी संपत्ती आहे! 📚 एकत्र येऊया, शिकूया आणि घडवूया उज्वल भविष्य! 🚀
   </marquee>
 </div>
 
@@ -296,7 +296,7 @@
         <img src="kadam.jpg" alt="अनिता देशमुख मॅडम" width="130" height="130">
         <h4>कदम सर</h4>
         <h5>मुख्याध्यापक</h5>
-        <h6>जि.प.प्रा.शा. सिंधी</h6>
+        <h6>पी एम श्री जि.प.प्रा.शा. सिंधी</h6>
         <h6>ता. उमरी, जि. नांदेड</h6>
       </div>
 
@@ -311,7 +311,7 @@
         <h4>साहेबराव पाटील पुयेड</h4>
         <h5>अध्यक्ष</h5>
         <h6>शालेय व्यवस्थापन समिती</h6>
-        <h6>जि.प.प्रा.शा. सिंधी</h6>
+        <h6>पी एम श्री जि.प.प्रा.शा. सिंधी</h6>
         <h6>ता. उमरी, जि. नांदेड</h6>
       </div>
     
