--- a/schooldata.html
+++ b/schooldata.html
@@ -96,8 +96,8 @@
 
 <header class="custom-header text-white text-center py-3">
   <div class="container">
-    <h1 class="school-title">जि.प.प्रा.शाळा सिंधि</h1>
-    <marquee behavior="scroll" direction="left" class="custom-marquee">🌟 Welcome to Z.P. Primary School Sindhi | Quality Education | Creativity | Excellence 🌟</marquee>
+    <h1 class="school-title">पी एम श्री जि.प.प्रा.शाळा सिंधि</h1>
+    <marquee behavior="scroll" direction="left" class="custom-marquee">🌟 Welcome to P.M.Shri.Z.P. Primary School Sindhi | Quality Education | Creativity | Excellence 🌟</marquee>
   </div>
 </header>
 
