--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>आदर्श गाव सिंधी</title>
+  <title>सिंधी</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
@@ -297,6 +297,7 @@
         <h4>कदम सर</h4>
         <h5>मुख्याध्यापक</h5>
         <h6>पी एम श्री जि.प.प्रा.शा. सिंधी</h6>
+       <h6>मो.न:9404644882</h6>
         <h6>ता. उमरी, जि. नांदेड</h6>
       </div>
 
@@ -312,6 +313,7 @@
         <h5>अध्यक्ष</h5>
         <h6>शालेय व्यवस्थापन समिती</h6>
         <h6>पी एम श्री जि.प.प्रा.शा. सिंधी</h6>
+        <h6>मो.न:9823768974</h6>
         <h6>ता. उमरी, जि. नांदेड</h6>
       </div>
     
