--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 .stylish-header-text {
-  font-size: 2.6rem;
+  font-size: 1.6rem;
   background: linear-gradient(to right, #ffd54f, #f06292, #ba68c8);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -241,7 +241,7 @@
 <div class="header d-flex justify-content-between align-items-center flex-wrap px-4 py-3 shadow-sm">
   <div class="d-flex align-items-center gap-3">
   
-    <h1 class="site-title m-0 stylish-header-text"><span class="text-pink">सिंधी</span></h1>
+    <h1 class="site-title m-0 stylish-header-text"><span class="text-pink">आदर्श शाळा सिंधी</span></h1>
   </div>
   <button class="btn btn-light login-btn shadow-sm px-4" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
 </div>
