--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
       var uname = document.getElementById('username').value;
       var pass = document.getElementById('password').value;
 
-      if (uname =="student" && pass == "sindhi") {
+      if (uname =="school" && pass == "sindhi") {
         location.assign("schooldata.html");
     
       } 
-        else if (uname =="teacher" && pass == "sindhi") {
+        else if (uname =="tea" && pass == "sindhi") {
         location.assign("studentAttendance.html");
     
       } 
